--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  background: #F3F2F2;
+  color: #325C74;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html,
+body {
+  font-family: 'Oxygen', sans-serif;
+}
+
+@media only screen and (max-width:1237px) {
+  body {
+      text-align: center;
+      width: 100%;
+      margin: 100px;
+  }
+}
+
+@media only screen and (max-width:1080px) {
+  body {
+      text-align: center;
+      width: 100%;
+      margin: 100px;
+  }
+}
+
+@media only screen and (min-width :300px) and (max-width:545px) {
+  html,
+  body {
+      text-align: center;
+      width: 100%;
+      display: block;
+  }
 }
