--- a/src/components/Aboutme.css
+++ b/src/components/Aboutme.css
@@ -1,7 +1,7 @@
 .about-me{
   text-align: center;
   font-family: 'Oxygen', sans-serif;
-  margin:30px 450px 30px; 
+  margin:30px 600x 30px; 
   padding-top: 400px;
   padding-bottom: 20px;
 }
