--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -40,6 +40,10 @@ width: 100%;
 margin:0;
 padding: 0;
 }
+#home{
+  padding-top: 30px;
+}
+
 }
 
 @media only screen and (min-width :300px) and (max-width:545px){
@@ -48,5 +52,9 @@ padding: 0;
     margin:0;
     padding: 0;
     }
+    #home{
+      padding-top: 30px;
+    }
+    
    }
   
