--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -15,6 +15,12 @@
   font-family: 'Oxygen', sans-serif; 
 }
 
+@media only screen and (max-width:1237px) {
+  .mdl-layout__header{
+padding-right:30px;
+
+  }
+}
 
 
 
