--- a/src/components/Aboutme.css
+++ b/src/components/Aboutme.css
@@ -7,7 +7,7 @@
 }
 
 .aboutme-para{
-  font-size:  20px;
+  font-size:  22px;
 }
 
 .aboutme-head{
@@ -17,9 +17,30 @@
   text-shadow: 2px 2px #83B4DC;
 }
 
-@media only screen and (max-width:1237px) {
+/* @media only screen and (max-width:1237px) {
   .about-me{
     margin:30px 30px;
   }
+ } */
+
+ @media only screen and (max-width: 2000px) {
+  .about-me{
+    margin:30px 30px;
+    width:100%;
+    display: block;
+  }
  }
+
+ @media only screen and (max-width: 600px) {
+  .aboutme-para{
+    font-size:  17px;
+    text-align: center;
+  } 
+ }
+
+ @media (max-width: 479px){
+  .aboutme-para{
+    font-size:  17px;
+    text-align: center;
+  } }
  
