--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -41,9 +41,10 @@
 #contact{
   padding:20px;
 }
-@media only screen and (min-width :300px) and (max-width:545px){
-#contact{
-  padding-left:50px ;
-}
-}
 
+@media screen and (max-width:2000px){
+  .contact{
+    padding-left: 4em;
+  }
+
+}
