--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -15,12 +15,19 @@
   font-family: 'Oxygen', sans-serif; 
 }
 
-@media only screen and (max-width:1237px) {
-  .mdl-layout__header{
-padding-right:30px;
-
+@media screen and (max-width:2000px){
+  .mdl-layout__inner-container {
+    display: block;
+    width: 100%;
+    margin: 0;
+    text-align: center;
   }
 }
-
-
-
+@media only screen and (max-width: 600px) {
+}
+.mdl-layout__inner-container {
+  display: block;
+  width: 100%;
+  margin: 0;
+  text-align: center;
+}
