--- a/src/index.css
+++ b/src/index.css
@@ -3,34 +3,17 @@ body {
   padding: 0;
   background: #F3F2F2;
   color: #325C74;
-}
-
-html,
-body {
   font-family: 'Oxygen', sans-serif;
 }
 
-@media only screen and (max-width:1237px) {
-  body {
-      text-align: center;
-      width: 100%;
-      margin: 100px;
-  }
-}
 
-@media only screen and (max-width:1080px) {
-  body {
-      text-align: center;
-      width: 100%;
-      margin: 100px;
-  }
-}
 
-@media only screen and (min-width :300px) and (max-width:545px) {
-  html,
+@media only screen and(max-width:2000px){
   body {
-      text-align: center;
-      width: 100%;
-      display: block;
+  text-align: center;
+  width: 100%;
+  display: block;
+  margin: 0;
+  font-size: auto;
   }
 }
