--- a/src/components/Footerbar.css
+++ b/src/components/Footerbar.css
@@ -4,9 +4,13 @@
   background: #000046;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #1CB5E0, #000046);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
-
   text-align: center;
   padding-top: 25px;
   color:#E6E6FA ;
+}
+@media (max-width: 479px){
+.footer{
+width: 600px;
+text-align: center;
+}
 }
