tried to make everything to center

--- a/src/components/Aboutme.css
+++ b/src/components/Aboutme.css
@@ -39,9 +39,9 @@
  }
 
  @media (max-width: 479px){
-  .aboutme-para{
+  .about-me{
     font-size:  17px;
     text-align: center;
-    margin-left: 120px;
+    margin-left: 150px;
   } }
  
