--- a/src/components/Education.css
+++ b/src/components/Education.css
@@ -15,6 +15,11 @@
  border-bottom: 2px solid #325C74;
 }
 
-.headerr-5{
+.header-5{
   font-size: 25px;
+}
+@media (max-width: 479px){
+  .education{
+    margin-left: 150px;
+  }
 }
