tried to make everything to center

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -63,6 +63,9 @@ color:#CC3232;
 
 @media (max-width: 479px){
   .contact{
-    margin-left: 127px;
+    margin-left: 125px;
+  }
+  .contact-head{
+    margin-left: 125px;
   }
 }
