tried to make everything to center

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -47,7 +47,7 @@ padding: 0;
 
 @media  screen and(max-width:992){
   .mdl-grid{
-  width: 660px;
+  width: 100%;
   margin:0;
   padding: 0;
   }
@@ -58,7 +58,7 @@ padding: 0;
 
 @media screen and(min-width:600px) and (max-width:1031px){
   .mdl-grid{
-    width: 100%;
+    width: 60rem;
     margin:0;
     padding-top: 30px;
     }
@@ -68,7 +68,7 @@ padding: 0;
 }
 @media  screen and (max-width: 601px) {
   .mdl-grid{
-    width: 100%;
+    width: 700px;
     margin:0;
     padding: 0;
     }
