--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -21,6 +21,9 @@
   .mdl-layout__inner-container {
     width: 650px;
   }} 
-
-
+  @media screen and(min-width:600px) and (max-width:1031px){
+    .mdl-layout__inner-container {
+      width: 60rem;
+      margin-top: 30px;
+  }}
  
