--- a/src/components/Aboutme.css
+++ b/src/components/Aboutme.css
@@ -44,9 +44,9 @@
     text-align: center;
     margin-left: 120px;
   } }
-  @media screen and (max-width:1031px){
+/*  
     .about-me{
       margin-left: 30rem;
     }
-  }
- 
+  } @media screen and (max-width:1031px){
+  */
