--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -17,11 +17,11 @@
 .mdl-layout__inner-container {
   width: 100%;
 }
-@media (max-width: 479px){
+@media (max-width: 768px){
   .mdl-layout__inner-container {
     width: 650px;
   }} 
-  @media screen and (max-width:1031px){
+  @media screen and (min-width:600px){
     .mdl-layout__inner-container {
       /* color: red; */
       width: 70rem;
