--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -19,7 +19,7 @@
 }
 @media (max-width: 768px){
   .mdl-layout__inner-container {
-    width: 650px;
+    width: 60rem;
   }} 
   @media screen and (min-width:600px){
     .mdl-layout__inner-container {
