--- a/src/components/Education.css
+++ b/src/components/Education.css
@@ -18,16 +18,20 @@
 .header-5{
   font-size: 25px;
 }
-@media (max-width: 479px){
+@media (max-width: 768px){
   .education-one{
-    margin: 0 10% 0 40%;
-    display: inline-block;
-    width: 35%;
+    white-space: nowrap;
+    margin:30px 30px;
+    width:50rem;
+    border-bottom: 2px solid #325C74;
   }
   .education-two{
-    margin-left: 220px;
+     white-space: nowrap; 
+     margin:30px 30px; 
   }
   .education-header{
-    margin-left:220px; 
+     margin-left:220px; 
+     
   }
+  
 }
