--- a/src/components/Education.css
+++ b/src/components/Education.css
@@ -33,3 +33,18 @@
   }
   
 }
+@media (min-width:600px){
+  .education-one{
+   margin-left:100px;
+   width: 50%;
+   border-bottom: 2px solid #325C74;
+  }
+  .education-two{
+    margin-left:100px;
+  }
+  .education-header{
+     margin-left:100px; 
+     
+  }
+  
+}
