--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -149,3 +149,11 @@
     margin-left: 140px;
   }
 }
+@media screen and (min-width:600px){
+  .project{
+    margin-left: 100px;
+  }
+  .project-head{
+    margin-left: 100px;
+  }
+}
