--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -53,4 +53,10 @@ hr {
      margin-left: 140px;
    }
  }
+
+ @media screen and (min-width:600px){
+  .skills{
+    margin-left: 100px;
+  }
+ }
  
