--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -54,14 +54,14 @@ color:#CC3232;
   padding:20px;
 }
 
-@media screen and (max-width:2000px){
+/* @media screen and (max-width:2000px){
   .contact{
     padding-left: 4em;
   }
 
-}
+} */
 
-@media (max-width: 479px){
+@media (max-width:768px){
   .contact{
     margin-left: 180px;
   }
@@ -76,4 +76,64 @@ color:#CC3232;
   .contact-head{
     margin-left: 100px;
   }
+}
+
+@media screen and (min-width: 768px){
+
+  .fas{
+    width: 100px;
+    height: 100px;
+    color: #483d8b;
+  }
+  .fas.fa-envelope{
+  color:#CC3232;
+  }
+  
+  .phone{
+    display: flex;
+    flex-direction: column;
+    padding-left: 2em;
+    margin:10px 40px;
+  }
+  
+  .email{
+    display: flex;
+    flex-direction: column;
+    padding-left: 6em;
+    margin:10px 40px;
+    color:#CC3232 ;
+  }
+  .active, .fas.fa-envelope:hover {
+    color: 	#BC8F8F;
+  }
+  .active, .email:hover {
+    color: 	#BC8F8F;
+  }
+  
+  
+  
+  .contact{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-left: 2em;
+  }
+  
+  .contact-head{
+    padding-right: 1em;
+    font-family: 'Oxygen', sans-serif;
+    text-decoration: underline;
+    font-weight: 700;
+    text-shadow: 2px 2px #83B4DC;
+  }
+  
+  .fas{
+    margin-bottom: -50px;
+    padding-bottom: 0px;
+  }
+  
+  #contact{
+    padding:20px;
+  }
+  
 }
