--- a/src/components/Footerbar.css
+++ b/src/components/Footerbar.css
@@ -8,7 +8,7 @@
   padding-top: 25px;
   color:#E6E6FA ;
 }
-@media (max-width: 479px){
+@media (max-width: 768px){
 .footer{
 width: 650px;
 text-align: center;
@@ -18,5 +18,18 @@ text-align: center;
   .footer{
   width: 70rem;
   text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px){
+  .footer{
+    height:50px;
+    width:100%;
+    background: #000046;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #1CB5E0, #000046);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    text-align: center;
+    padding-top: 25px;
+    color:#E6E6FA ;
   }
 }
