--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -22,7 +22,7 @@ hr {
   font-size: 25px;
 }
 
-@media screen and (max-width:2000px){
+/* @media screen and (max-width:2000px){
   .skills{
     text-align: center;
     margin: 0;
@@ -45,9 +45,9 @@ hr {
   .head-5{
     font-family: 'Oxygen', sans-serif;
     font-size: 20px;
-  }
+  } */
 
- }
+ 
  @media (max-width: 479px){
    .skills{
      margin-left: 140px;
@@ -57,6 +57,15 @@ hr {
  @media screen and (min-width:600px){
   .skills{
     margin-left: 100px;
+  }
+ }
+ @media screen and (min-width: 768px){
+  .skills {
+  text-align: center;
+  font-family: 'Oxygen', sans-serif;
+  font-size: 30px;
+  margin: 10px 450px 40px;
+  padding-bottom: 20px;
   }
  }
  
