--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -54,12 +54,12 @@ hr {
    }
  }
 
- @media screen and (min-width:600px){
+ /* @media screen and (min-width:600px){
   .skills{
     margin-left: 100px;
   }
- }
- @media screen and (min-width: 768px){
+ } */
+ /* @media screen and (min-width: 768px){
   .skills {
   text-align: center;
   font-family: 'Oxygen', sans-serif;
@@ -67,5 +67,5 @@ hr {
   margin: 10px 450px 40px;
   padding-bottom: 20px;
   }
- }
+ } */
  
