--- a/src/components/Aboutme.css
+++ b/src/components/Aboutme.css
@@ -42,7 +42,7 @@
   .about-me{
     font-size:  17px;
     text-align: center;
-    margin:30px 30px;
+    margin:140px;
   } }
   /* @media screen and (min-width:600px){
     .about-me{
