--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -22,7 +22,7 @@ hr {
   font-size: 25px;
 }
 
-/* @media screen and (max-width:2000px){
+@media screen and (max-width:2000px){
   .skills{
     text-align: center;
     margin: 0;
@@ -45,7 +45,8 @@ hr {
   .head-5{
     font-family: 'Oxygen', sans-serif;
     font-size: 20px;
-  } */
+  }
+}
 
  
  @media (max-width: 768px){
@@ -54,12 +55,12 @@ hr {
    }
  }
 
- /* @media screen and (min-width:600px){
+  /* @media screen and (min-width:600px){
   .skills{
     margin-left: 100px;
   }
- } */
- /* @media screen and (min-width: 768px){
+ }
+ @media screen and (min-width: 768px){
   .skills {
   text-align: center;
   font-family: 'Oxygen', sans-serif;
@@ -67,5 +68,5 @@ hr {
   margin: 10px 450px 40px;
   padding-bottom: 20px;
   }
- } */
- 
+ } 
+   */
