trying to make responsive desktop

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -69,14 +69,14 @@ color:#CC3232;
     margin-left: 200px;
   }
 }
-/* @media screen and (min-width:600px){
+@media screen and (min-width:600px) and (max-width:1024px){
   .contact{
     margin-left: 100px;
   }
   .contact-head{
     margin-left: 100px;
   }
-} */
+} 
 
 /* @media screen and (min-width: 768px){
 
