--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -147,14 +147,14 @@
     margin-left: 140px;
   }
 }
-/* @media screen and (min-width:600px){
+@media screen and (min-width:600px) and (max-width:1024px){
   .project{
     margin-left: 100px;
   }
   .project-head{
     margin-left: 100px;
   }
-}  */
+}  
 
 /* @media screen and (min-width: 768px){
   .card{
