--- a/src/components/Aboutme.css
+++ b/src/components/Aboutme.css
@@ -44,12 +44,12 @@
     text-align: center;
     margin-left:140px;
   } }
-  /* @media screen and (min-width:600px){
+  @media screen and (min-width:600px) and (max-width:1024px){
     .about-me{
     text-align: center;
     margin-left:100px;
   }} 
-    */
+    
   /* @media screen and (min-width: 768px){
     .about-me{
       text-align: center;
