--- a/src/components/Footerbar.css
+++ b/src/components/Footerbar.css
@@ -14,12 +14,12 @@
 text-align: center;
 }
 }
-/* @media screen and (min-width:600px){
+@media screen and (min-width:600px) and (max-width:1024px){
   .footer{
   width: 70rem;
   text-align: center;
   }
-} */
+}
 
 /* @media screen and (min-width: 768px){
   
