--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -22,10 +22,10 @@
     width: 50rem;
     
   }} 
-  /* @media screen and (min-width:600px){
+  @media screen and (min-width:600px) and (max-width:1024px){
     .mdl-layout__inner-container {
-      /* color: red; */
-      /* width: 70rem;
+       color: red; 
+       width: 70rem;
       margin-top: -5px;  
-  }} */
+  }} 
   
