--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -55,12 +55,12 @@ hr {
    }
  }
 
-  /* @media screen and (min-width:600px){
+ @media screen and (min-width:600px) and (max-width:1024px){
   .skills{
     margin-left: 100px;
   }
  }
- @media screen and (min-width: 768px){
+ /* @media screen and (min-width: 768px){
   .skills {
   text-align: center;
   font-family: 'Oxygen', sans-serif;
@@ -68,5 +68,5 @@ hr {
   margin: 10px 450px 40px;
   padding-bottom: 20px;
   }
- } 
-   */
+ }  */
+   
