--- a/src/components/Aboutme.css
+++ b/src/components/Aboutme.css
@@ -1,8 +1,8 @@
 .about-me{
   text-align: center;
   font-family: 'Oxygen', sans-serif;
-  margin:30px 700px 30px; 
-  padding-top: 500px;
+   margin:30px 700px 30px;  
+  padding-top: 300px;
   padding-bottom: 20px;
 }
 
@@ -20,37 +20,40 @@
   text-align: center;
 }
 
-@media only screen and (max-width:1237px) {
+/* @media only screen and (max-width:1237px) {
   .about-me{
     margin:30px 30px;
   }
- } 
+ }  */
 
- @media only screen and (max-width: 2000px) {
+ /* @media only screen and (max-width: 2000px) {
   .about-me{
-    margin:30px 30px;
-    width:100%;
-    display: block;
+    text-align: center;
+    margin: 0;
+    width: 100%;text-align: center;
+   margin:30px 30px;
   }
- }
+ } */
 
  @media only screen and (max-width: 600px) {
-  .aboutme-para{
-    font-size:  17px;
+  .about-me{
     text-align: center;
-  } 
+    margin:30px 30px; 
+    padding-left: 40px;
  } 
+}
 
- @media (max-width: 768px){
+ /* @media (max-width: 768px){
   .about-me{
     font-size:  17px;
     text-align: center;
     margin-left:140px;
-  } }
-  @media screen and (min-width:600px) and (max-width:1024px){
+  } } */
+  @media screen and (min-width:601px) and (max-width:2000px){
     .about-me{
-    text-align: center;
-    margin-left:100px;
+      text-align: center;
+      margin:30px 100px; 
+      
   }} 
     
   /* @media screen and (min-width: 768px){
