--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -1,15 +1,15 @@
 ul{
   font-family: 'Oxygen', sans-serif;
-  margin: 0 32%;
+ margin-left: 32%;
   font-size:  22px;
 }
 .mdl-list__item{
   padding: 0 !important;
 }
 
-@media screen and (min-width:600px) and (max-width:1024px){
+@media screen and (min-width:601px) and (max-width:2000px){
   #experience{
   text-align: center;
-  margin-left:130px;
+  /* margin-left:130px; */
 }} 
   
