corrected contact icon

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,9 +1,11 @@
-.fas{
+.fas.fa-mobile-alt{
   width: 100px;
   height: 100px;
   color: #483d8b;
 }
 .fas.fa-envelope{
+  width: 100px;
+  height: 100px;
 color:#CC3232;
 }
 
